Add devcontainer, move and clean a bit dummy_test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
 add_executable(run_tests 
-        src/dummy_test.cpp
+        test/dummy_test.cpp
         )
 
 target_link_libraries(run_tests 
