--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,11 @@
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": ["ms-vscode.cpptools"]
+	"extensions": ["ms-vscode.cpptools",
+		"ms-vscode.cmake-tools",
+		"hbenl.vscode-test-explorer",
+		"matepek.vscode-catch2-test-adapter"
+	]
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
